<resources>
    <string name="app_name">Heart of Taiwanese</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="search_ch">Search with Chinese</string>
    <string name="taiwanese_result">Taiwanese result</string>
    <string name="error">Unknown Error</string>
    <string name="too_many_requests">Error: Too many requests. Please try again later, or use Chinese-only functionality.</string>
    <string name="errorNotFound">Error: No result was found.</string>
    <string name="sampleEnglishText" translatable="false">hippo</string>
    <string name="clear">clear</string>
    <string name="search_eng">Search with English</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_home">Translation</string>
    <string name="translationFragmentExplanation">One, two, three. English, Chinese, Taiwanese. Some things just flow effortlessly. So… Good %1$s. What would you like to translate today?</string>
    <string name="translationsTitle">Translations</string>
    <string name="recentFragmentTitle">Recently viewed</string>
    <string name="favoritesFragmentTitle">Favorites</string>
    <string name="favoritesNoneMessage">There are no favorites to display.</string>
    <string name="recentlyViewedNone">There are no recently viewed items to display.</string>
    <string-array name="timeOfDay">
        <item>morning</item>
        <item>afternoon</item>
        <item>evening</item>
    </string-array>
</resources>
