<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/chinese"
            android:inputType="text"
            android:text="河馬"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/submit_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_eng" />

        <EditText
            android:id="@+id/editTextEng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/english"
            android:inputType="text"
            android:text="@string/sampleEnglishText"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/submit_ch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_ch" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear" />

        <TextView
            android:id="@+id/tw_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taiwanese_result"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</ScrollView>