<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ProgressBar
        android:id="@+id/progressBarLoading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tvTranslateTitle"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_vertical_margin"
                android:layout_marginBottom="@dimen/element_vertical_margin"
                android:text="@string/translationsTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTranslateExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_vertical_margin"
                android:layout_marginBottom="@dimen/element_vertical_margin"
                android:text="@string/translationFragmentExplanation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTranslateTitle" />

            <EditText
                android:id="@+id/editTextCh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_vertical_margin"
                android:layout_marginBottom="@dimen/element_vertical_margin"
                android:ems="10"
                android:hint="@string/chinese"
                android:importantForAutofill="no"
                android:inputType="text|textNoSuggestions"
                android:text="河馬"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTranslateExplanation" />

            <Button
                android:id="@+id/submit_ch"
                style="@style/SearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_ch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextCh" />

            <EditText
                android:id="@+id/editTextEng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_vertical_margin"
                android:layout_marginBottom="@dimen/element_vertical_margin"
                android:ems="10"
                android:hint="@string/english"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions|text"
                android:text="@string/sampleEnglishText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submit_ch" />

            <Button
                android:id="@+id/submit_en"
                style="@style/SearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_eng"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextEng" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorBackground"
                android:text="@string/clear"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submit_en" />

            <TextView
                android:id="@+id/twResult"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/taiwanese_result"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/result"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clearButton"
                app:layout_constraintVertical_bias="0.8"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="hi"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>